src/k8s/bases/deepstack/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepstack
spec:
  template:
    spec:
      containers:
        - name: deepstack
          image: deepquestai/deepstack:arm64-2021.06.1
          ports:
            - name: svc-ui
              containerPort: 5000
          resources:
            limits:
              memory: "750Mi"
              cpu: "1"
            requests:
              memory: "400Mi"
              cpu: "300m"
          volumeMounts:
            - mountPath: /datastore
              name: deepstack-datastore
            - mountPath: /modelstore/detection
              name: deepstack-modelstore
      volumes:
        - name: deepstack-datastore
          persistentVolumeClaim:
            claimName: deepstack-datastore-pvc
        - name: deepstack-modelstore
          persistentVolumeClaim:
            claimName: deepstack-modelstore-pvc
