src/k8s/bases/deepstack/service.yml
apiVersion: v1
kind: Service
metadata:
  name: deepstack-svc
spec:
  ports:
    - name: 5000-tcp
      port: 5000
