src/k8s/bases/deepstack/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deepstack-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: deepstack.${NETWORK_HOSTNAME_SUFFIX}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: deepstack-svc
                port:
                  name: 5000-tcp
